[gd_scene load_steps=2 format=3 uid="uid://cvvkqekg4ai3u"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_rto5n"]

[node name="Main" type="Node"]
script = ExtResource("1_rto5n")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TempBackground" type="ColorRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509286, 0.509286, 0.509286, 1)

[node name="Start" type="Button" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.099
anchor_right = 0.167
anchor_bottom = 0.198
offset_left = -0.512001
offset_top = -0.152008
offset_right = -0.384018
offset_bottom = -0.304016
text = "Start"

[node name="Load" type="Button" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.247
anchor_right = 0.167
anchor_bottom = 0.346
offset_left = -0.512001
offset_top = -0.0559998
offset_right = -0.384018
offset_bottom = -0.208008
text = "Load"

[node name="Quit" type="Button" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.395
anchor_right = 0.167
anchor_bottom = 0.494
offset_left = -0.512001
offset_top = 0.0399933
offset_right = -0.384018
offset_bottom = -0.112
text = "Quit"

[connection signal="button_up" from="UI/MainMenu/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="UI/MainMenu/Load" to="." method="_on_load_button_up"]
[connection signal="button_up" from="UI/MainMenu/Quit" to="." method="_on_quit_button_up"]
